# book-notes

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  clippy.toml  rustfmt.toml
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/src/books/: mod.rs
crates/api/src/routes/: mod.rs
frontend/: package-lock.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx
frontend/src/api/: books.ts
frontend/src/components/: BookForm.tsx
frontend/src/components/Books/: AddBookModal.tsx  BookItem.tsx  BookItemGrid.tsx  BookItemList.tsx  BooksGrid.tsx  BooksList.tsx  DeleteConfirmDialog.tsx  EditBookModal.tsx  SearchFilterBar.tsx  Sidebar.tsx  StatusChip.tsx
frontend/src/components/Layout/: NavigationBar.tsx
frontend/src/components/shared/: ActionButtons.tsx  BookCover.tsx  BookInfo.tsx  FormField.tsx  ModalWrapper.tsx  StatusSelector.tsx  TagInput.tsx
frontend/src/constants/: index.ts
frontend/src/data/: mockBooks.ts
frontend/src/pages/: AnalysisPage.tsx  BooksPage.tsx  NotesPage.tsx
frontend/src/routes/: index.tsx
frontend/src/theme/: index.ts
frontend/src/types/: Book.ts  api.ts  index.ts  ui.ts
frontend/src/utils/: bookUtils.ts
migrations/: 20241229081959_init_books.sql  20250922193639_enhance_books_schema.sql
src/: config.rs  database.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/errors/: api_error.rs  mod.rs
src/handlers/: books.rs
src/models/: book.rs  book_types.rs  book_validation.rs  mod.rs
src/routes/: books.rs  mod.rs
src/server/: create_app.rs  create_server.rs  mod.rs
src/services/: book_service.rs  book_service_broken.rs  book_service_old.rs  mod.rs
