[package]
name = "book_notes_api"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "book_notes_api"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7.9" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SQLx for Postgres:
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres"] }

# For loading environment variables:
dotenvy = "0.15"